added data-folder as a source of unit test data.

--- a/SharpDump.Test/SharpDump.Test.csproj
+++ b/SharpDump.Test/SharpDump.Test.csproj
@@ -26,4 +26,10 @@
     <ProjectReference Include="..\SharpDump.Logic\SharpDump.Logic.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Data\existedOutput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
