added more test for compress

--- a/SharpDump.Test/SharpDump.Test.csproj
+++ b/SharpDump.Test/SharpDump.Test.csproj
@@ -27,7 +27,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Data\alreadyZippedInput.zip">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\existedEmptyInput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Data\existedOutput.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\inputWithContent.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
