1. replaced getting process info into separate interface IProcessProvider and its implementation ProcessProvider. 2. added test class for ProcessProvider testing.

--- a/SharpDump.Test/SharpDump.Test.csproj
+++ b/SharpDump.Test/SharpDump.Test.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SharpDump.Infrastructure\SharpDump.Infrastructure.csproj" />
     <ProjectReference Include="..\SharpDump.Logic\SharpDump.Logic.csproj" />
   </ItemGroup>
 
